added test stage

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,16 @@ phases:
       - npm install
   build:
     commands:
-      - serverless deploy
+      - echo "Running database migrations..."
+  test:
+    commands:
+      - echo "Running tests..."
+      - npm run test
+  post_build:
+    commands:
+      - echo "Packaging and deploying the serverless application..."
+      - serverless package
+      - serverless deploy --stage $ENVIRONMENT      
 
 cache:
   paths:
