--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "tm": "sls offline start"
+    "tm": "sls offline start",
+    "test": "jest handler.test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "serverless-offline": "^8.8.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
