added docker en

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,7 @@ phases:
     commands:
       - sudo apt update
       - sudo apt install -y docker.io
-      - sudo systemctl start docker
-      - sudo systemctl enable docker
+      - sudo dockerd &
       - npm install -g serverless
       - npm install
 
